# DocAgent

./: .env.example  .gitignore  Dockerfile.agent  README.md  docker-compose.yml  guess_number.py  pyproject.toml
article/: 00-index_EN.md  01-architecture-overview_EN.md  02-agent-loop_EN.md  03-tool-system_EN.md  04-context-compression_EN.md  05-streaming-executor_EN.md  06-multi-agent_EN.md
backend/: .dockerignore  Dockerfile  README.md  pom.xml  start.bat
backend/src/main/java/com/example/docagent/: DocAgentApplication.java
backend/src/main/java/com/example/docagent/config/: CorsConfig.java  DataInitializer.java  GlobalExceptionHandler.java  RestTemplateConfig.java  SecurityConfig.java  WebSocketConfig.java  WebSocketEventListener.java
backend/src/main/java/com/example/docagent/controller/: AuthController.java  DocumentController.java  ProjectController.java  WebSocketController.java
backend/src/main/resources/: application-prod.yml  application.yml
deploy/: deploy.sh  docagent-agent.service  docagent-backend.service  nginx.conf
docagent/: __init__.py  agent_service.py  doc_agent.py  doc_cli.py  session.py
docagent/rag/: __init__.py  indexer.py  parser.py  qa.py  retriever.py
docagent/tools/: __init__.py  doc_generator.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DocumentBrowser.tsx  DocumentGenerator.tsx  HealthStatus.tsx  ProjectList.tsx  TaskMonitor.tsx
frontend/src/pages/: LoginPage.tsx
frontend/src/services/: api.ts  authService.ts  documentService.ts  projectService.ts  ragService.ts  settingsService.ts  websocket.ts
frontend/src/types/: auth.ts  index.ts
tests/: test_session.py
(+34 files in other folders)
