[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docagent"
version = "1.0.0"
description = "AI Document Generator Agent - Generate README, API docs automatically"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your@email.com" },
]
keywords = ["ai", "agent", "document", "generator", "llm", "readme", "api-doc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "openai>=1.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "python-dotenv>=1.0",
    "python-docx>=0.8.12",
    "PyMuPDF>=1.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["docagent"]

[project.optional-dependencies]
litellm = ["litellm>=1.60.0,<2.0.0"]
server = ["fastapi>=0.100.0", "uvicorn>=0.23.0", "websockets>=11.0"]
dev = ["pytest>=7.0", "fastapi>=0.100.0", "uvicorn>=0.23.0"]

[project.scripts]
docagent = "docagent.cli:main"
docagent-server = "docagent.agent_service:run_server"

[project.urls]
Homepage = "https://github.com/your-username/DocAgent"
Repository = "https://github.com/your-username/DocAgent"
Issues = "https://github.com/your-username/DocAgent/issues"